add scm information to parent pom so we can make a snapshot release ("mvn clean deploy")

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,18 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.sonatype.oss</groupId>
+    <artifactId>oss-parent</artifactId>
+    <version>7</version>
+  </parent>
+  
+  <scm>
+    <connection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/trunk/languagetool/</connection>
+    <developerConnection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/trunk/languagetool/</developerConnection>
+    <url>http://languagetool.svn.sourceforge.net/languagetool/trunk/languagetool/</url>
+  </scm>
+
   <groupId>org.languagetool</groupId>
   <artifactId>languagetool-parent</artifactId>
   <version>2.1-SNAPSHOT</version>
