--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     <module>hunspell-native-libs</module>
     <module>languagetool-wikipedia</module>
     <module>languagetool-server</module>
+    <!-- don't add languagetool-client-example here, it's built manually only -->
   </modules>
 
 </project>
