languagetool-server.jar needs to be added to the classpath as its not in the "libs" directory

--- a/languagetool-standalone/pom.xml
+++ b/languagetool-standalone/pom.xml
@@ -71,7 +71,7 @@
                         </manifest>
                         <manifestEntries>
                             <!-- as we later unzip the language JARs (see zip.xml), we need to add the top directory to the classpath: -->
-                            <Class-Path>./</Class-Path>
+                            <Class-Path>./ languagetool-server.jar</Class-Path>
                             <Main-Class>org.languagetool.gui.Main</Main-Class>
                             <ComponentVersion>${project.version}</ComponentVersion>
                             <Implementation-Date>${maven.build.timestamp}</Implementation-Date>
