--- a/languagetool-language-modules/all/pom.xml
+++ b/languagetool-language-modules/all/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.1-SNAPSHOT</version>
+        <version>2.1-beta1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
@@ -61,154 +60,154 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-en</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-fr</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-de</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-pl</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-ca</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-it</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-br</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-nl</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-pt</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-ru</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-ast</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-be</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-zh</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-da</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-eo</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-gl</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-el</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-is</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-ja</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-km</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-lt</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-ml</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-ro</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-sk</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-sl</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-es</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-sv</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-tl</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-uk</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
 
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
