--- a/languagetool-office-extension/pom.xml
+++ b/languagetool-office-extension/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.1-SNAPSHOT</version>
+        <version>2.1-beta1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -118,7 +117,7 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
             <exclusions>
                 <exclusion>
                     <!-- was never part of the old ant build, so exclude it here, too -->
@@ -135,12 +134,12 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-gui-commons</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-all</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
 
         <dependency>
