--- a/languagetool-standalone/pom.xml
+++ b/languagetool-standalone/pom.xml
@@ -1,11 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.1-SNAPSHOT</version>
+        <version>2.1-beta1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -111,28 +110,28 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-gui-commons</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-commandline</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-server</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
 
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-all</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
                 
         <!-- Some tests are used at runtime for rule developers, thus no 'test' scope here: -->
@@ -140,7 +139,7 @@
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
             <type>test-jar</type>
         </dependency>
         <dependency>
