--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <prerequisites>
+    <maven>3.04</maven>
+  </prerequisites>
+    
   <parent>
     <groupId>org.sonatype.oss</groupId>
     <artifactId>oss-parent</artifactId>
@@ -11,14 +12,14 @@
   </parent>
   
   <scm>
-    <connection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/trunk/languagetool/</connection>
-    <developerConnection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/trunk/languagetool/</developerConnection>
-    <url>http://languagetool.svn.sourceforge.net/languagetool/trunk/languagetool/</url>
+    <connection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/2.1-beta1</connection>
+    <developerConnection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/2.1-beta1</developerConnection>
+    <url>http://languagetool.svn.sourceforge.net/languagetool/tags/2.1-beta1</url>
   </scm>
 
   <groupId>org.languagetool</groupId>
   <artifactId>languagetool-parent</artifactId>
-  <version>2.1-SNAPSHOT</version>
+  <version>2.1-beta1</version>
   <packaging>pom</packaging>
 
   <properties>
@@ -27,6 +28,37 @@
       <maven.compiler.target>1.6</maven.compiler.target>
       <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
   </properties>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <tagBase>https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/</tagBase>
+          <mavenExecutorId>forked-path</mavenExecutorId>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.4</version>
+        <configuration>
+          <useAgent>true</useAgent>  
+        </configuration>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
     
   <modules>
     <module>languagetool-core</module>
