[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <prerequisites>
@@ -12,9 +12,9 @@
   </parent>
   
   <scm>
-    <connection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/2.1-beta1</connection>
-    <developerConnection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/2.1-beta1</developerConnection>
-    <url>http://languagetool.svn.sourceforge.net/languagetool/tags/2.1-beta1</url>
+    <connection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/trunk/languagetool/</connection>
+    <developerConnection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/trunk/languagetool/</developerConnection>
+    <url>http://languagetool.svn.sourceforge.net/languagetool/trunk/languagetool/</url>
   </scm>
 
   <groupId>org.languagetool</groupId>
