--- a/languagetool-client-example/pom.xml
+++ b/languagetool-client-example/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-all</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1-beta1</version>
         </dependency>
     </dependencies>
 
