[en] fix sf bug #3560624 (missing CD tags for numbers)

--- a/languagetool-language-modules/en/pom.xml
+++ b/languagetool-language-modules/en/pom.xml
@@ -43,6 +43,7 @@
                     <exclude>org/languagetool/resource/en/uncountable.txt</exclude>
                     <exclude>org/languagetool/resource/en/filter*.txt</exclude>
                     <exclude>org/languagetool/resource/en/*.awk</exclude>
+                    <exclude>org/languagetool/resource/en/numbers.txt</exclude>
                 </excludes>
             </resource>
         </resources>
