--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
     <module>languagetool-wikipedia</module>
     <module>languagetool-server</module>
     <!-- don't add languagetool-client-example here, it's built manually only -->
+    <!-- no language-webstart either -->
   </modules>
 
 </project>
