prevent inheriting the maven-gpg-plugin - caused problems in sub modules that suddenly required gpg; we'll see if that works for releasing...

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
         <version>1.4</version>
+        <inherited>false</inherited> 
         <configuration>
           <useAgent>true</useAgent>  
         </configuration>
@@ -91,6 +92,7 @@
     <module>languagetool-language-modules/sv</module>
     <module>languagetool-language-modules/tl</module>
     <module>languagetool-language-modules/uk</module>
+    <!--<module>languagetool-language-modules/de-DE-x-simple-language</module>-->
     <module>languagetool-language-modules/all</module>
     <module>languagetool-gui-commons</module>
     <module>languagetool-commandline</module>
