prepare new variant "SImple German", will follow with the next commit(s) due to subversion problems

--- a/languagetool-language-modules/all/pom.xml
+++ b/languagetool-language-modules/all/pom.xml
@@ -202,6 +202,8 @@
             <artifactId>language-uk</artifactId>
             <version>2.1-beta1</version>
         </dependency>
+        <!-- note: de-DE-x-simple-language is not yet included because we don't want to
+             show it in the GUI yet (we have no way there yet to describe what this actually is) -->
 
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
