--- a/languagetool-server/pom.xml
+++ b/languagetool-server/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>language-all</artifactId>
             <version>2.1-beta1</version>
         </dependency>
+        <dependency>
+            <!-- not part of language-all yet: -->
+            <groupId>org.languagetool</groupId>
+            <artifactId>language-de-DE-x-simple-language</artifactId>
+            <version>2.1-beta1</version>
+        </dependency>
 
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
