--- a/languagetool-commandline/pom.xml
+++ b/languagetool-commandline/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>language-all</artifactId>
             <version>2.1-beta1</version>
         </dependency>
+        <dependency>
+            <!-- not part of language-all yet: -->
+            <groupId>org.languagetool</groupId>
+            <artifactId>language-de-DE-x-simple-language</artifactId>
+            <version>2.1-beta1</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
