--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
     <module>languagetool-language-modules/sv</module>
     <module>languagetool-language-modules/tl</module>
     <module>languagetool-language-modules/uk</module>
-    <!--<module>languagetool-language-modules/de-DE-x-simple-language</module>-->
+    <module>languagetool-language-modules/de-DE-x-simple-language</module>
     <module>languagetool-language-modules/all</module>
     <module>languagetool-gui-commons</module>
     <module>languagetool-commandline</module>
