add simple German to "all" module - everything else just causes confusion...

--- a/languagetool-language-modules/all/pom.xml
+++ b/languagetool-language-modules/all/pom.xml
@@ -74,6 +74,11 @@
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
+            <artifactId>language-de-DE-x-simple-language</artifactId>
+            <version>2.1-beta1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.languagetool</groupId>
             <artifactId>language-pl</artifactId>
             <version>2.1-beta1</version>
         </dependency>
