--- a/languagetool-wikipedia/pom.xml
+++ b/languagetool-wikipedia/pom.xml
@@ -88,7 +88,13 @@
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-test-framework</artifactId>
-            <version>4.2.0</version>
+            <version>4.1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
             <scope>test</scope>
         </dependency>
 
@@ -121,18 +127,18 @@
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-queries</artifactId>
-            <version>4.2.0</version>
+            <version>4.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-analyzers-common</artifactId>
-            <version>4.2.0</version>
+            <version>4.1.0</version>
         </dependency>
         <dependency>
             <!-- used for regex queries -->
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-sandbox</artifactId>
-            <version>4.2.0</version>
+            <version>4.1.0</version>
         </dependency>
     </dependencies>
 
