--- a/languagetool-webstart/pom.xml
+++ b/languagetool-webstart/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.languagetool</groupId>
 		<artifactId>languagetool-parent</artifactId>
-		<version>2.1-beta1</version>
+		<version>2.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -128,7 +128,7 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-standalone</artifactId>
-            <version>2.1-beta1</version>
+            <version>2.1-SNAPSHOT</version>
          </dependency>
     </dependencies>    
 
