--- a/languagetool-gui-commons/pom.xml
+++ b/languagetool-gui-commons/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.1-SNAPSHOT</version>
+        <version>2.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1</version>
         </dependency>
 
         <dependency>
