[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
   </parent>
   
   <scm>
-    <connection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/languagetool-parent-2.1</connection>
-    <developerConnection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/languagetool-parent-2.1</developerConnection>
-    <url>http://languagetool.svn.sourceforge.net/languagetool/tags/languagetool-parent-2.1</url>
+    <connection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/trunk/languagetool/</connection>
+    <developerConnection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/trunk/languagetool/</developerConnection>
+    <url>http://languagetool.svn.sourceforge.net/languagetool/trunk/languagetool/</url>
   </scm>
 
   <groupId>org.languagetool</groupId>
   <artifactId>languagetool-parent</artifactId>
-  <version>2.1</version>
+  <version>2.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
