--- a/languagetool-client-example/pom.xml
+++ b/languagetool-client-example/pom.xml
@@ -17,7 +17,7 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-all</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1</version>
         </dependency>
     </dependencies>
 
@@ -36,6 +36,23 @@
                 <checksumPolicy>fail</checksumPolicy>
             </snapshots>
             <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <layout>default</layout>
+        </repository>
+        <repository>
+            <id>sonatypestaging</id>
+            <name>Sonatype Staging</name>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+                <checksumPolicy>warn</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+                <updatePolicy>never</updatePolicy>
+                <checksumPolicy>fail</checksumPolicy>
+            </snapshots>
+            <!-- use the url to which the artifacts have been copied after clicking "Close" in Sonatype: -->
+            <url>https://oss.sonatype.org/content/repositories/orglanguagetool-785/</url>
             <layout>default</layout>
         </repository>
     </repositories>
