--- a/languagetool-language-modules/de/pom.xml
+++ b/languagetool-language-modules/de/pom.xml
@@ -61,6 +61,11 @@
                 <version>2.14.1</version>
                 <configuration>
                     <argLine>-Xms256m -Xmx256m</argLine>
+                    <!-- half as many forks as processors: -->
+                    <!--
+                    <forkCount>0.5C</forkCount>
+                    <reuseForks>true</reuseForks>
+                    -->
                 </configuration>
             </plugin>
         </plugins>
