Initial support for disambiguator for Ukrainian Ukrainian dictionary and grammar updates More tests

--- a/languagetool-language-modules/uk/pom.xml
+++ b/languagetool-language-modules/uk/pom.xml
@@ -34,6 +34,14 @@
     </developers>
     
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>org/languagetool/resource/uk/src/**/*</exclude>
+                </excludes>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
