--- a/hunspell-native-libs/pom.xml
+++ b/hunspell-native-libs/pom.xml
@@ -14,6 +14,28 @@
     <url>http://www.languagetool.org</url>
     <name>Hunspell native libs for LanguageTool</name>
 
+    <licenses>
+        <!-- source: http://hunspell.sourceforge.net/ -->
+        <license>
+            <name>GNU Lesser General Public License</name>
+            <url>http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt</url>
+            <distribution>repo</distribution>
+            <comments>version 2.1 or later</comments>
+        </license>
+        <license>
+            <name>Mozilla Public License</name>
+            <url>http://www.mozilla.org/MPL/1.1/</url>
+            <comments>version 1.1 or later</comments>
+            <distribution>repo</distribution>
+        </license>
+        <license>
+            <name>GNU General Public License</name>
+            <url>http://www.gnu.org/licenses/gpl-2.0.html</url>
+            <comments>version 2 or later</comments>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <build>
         <resources>
             <resource>
