document maintainers here, too - does not 100% reflect http://www.languagetool.org/languages/, as I here defined "maintainer" as someone who is listed on that page *and* committed in the last 12 months

--- a/languagetool-language-modules/de/pom.xml
+++ b/languagetool-language-modules/de/pom.xml
@@ -25,6 +25,14 @@
 
     <developers>
         <developer>
+            <name>Jan Schreiber</name>
+            <roles><role>Maintainer</role></roles>
+        </developer>
+        <developer>
+            <name>Markus Brenneis</name>
+            <roles><role>Maintainer</role></roles>
+        </developer>
+        <developer>
             <name>Daniel Naber</name>
             <roles><role>Maintainer</role></roles>
         </developer>
