--- a/languagetool-language-modules/uk/pom.xml
+++ b/languagetool-language-modules/uk/pom.xml
@@ -25,6 +25,14 @@
 
     <developers>
         <developer>
+            <name>Andriy Rysin</name>
+            <roles><role>Maintainer</role></roles>
+        </developer>
+        <developer>
+            <name>Maksym Davydov</name>
+            <roles><role>Maintainer</role></roles>
+        </developer>
+        <developer>
             <name>Daniel Naber</name>
             <roles><role>Maintainer</role></roles>
         </developer>
