--- a/languagetool-language-modules/gl/pom.xml
+++ b/languagetool-language-modules/gl/pom.xml
@@ -25,6 +25,10 @@
 
     <developers>
         <developer>
+            <name>Susana Sotelo Docío</name>
+            <roles><role>Maintainer</role></roles>
+        </developer>
+        <developer>
             <name>Daniel Naber</name>
             <roles><role>Maintainer</role></roles>
         </developer>
