--- a/languagetool-wikipedia/pom.xml
+++ b/languagetool-wikipedia/pom.xml
@@ -134,6 +134,15 @@
             <artifactId>lucene-analyzers-common</artifactId>
             <version>4.1.0</version>
         </dependency>
+        <!-- comment in this or some other driver for your database if you want to store
+             results of Wikipedia checks to a database:
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.25</version>
+        </dependency>
+        -->
+
         <dependency>
             <!-- used for regex queries -->
             <groupId>org.apache.lucene</groupId>
