--- a/languagetool-language-modules/de-DE-x-simple-language/pom.xml
+++ b/languagetool-language-modules/de-DE-x-simple-language/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.2-SNAPSHOT</version>
+        <version>2.2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
@@ -28,14 +28,14 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-de</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.2</version>
         </dependency>
 
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.2</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
