--- a/languagetool-office-extension/pom.xml
+++ b/languagetool-office-extension/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.2-SNAPSHOT</version>
+        <version>2.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -117,7 +117,7 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.2</version>
             <exclusions>
                 <exclusion>
                     <!-- was never part of the old ant build, so exclude it here, too -->
@@ -134,12 +134,12 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-gui-commons</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.2</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-all</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.2</version>
         </dependency>
 
         <dependency>
