--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
   </parent>
   
   <scm>
-    <connection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/languagetool-parent-2.2</connection>
-    <developerConnection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/languagetool-parent-2.2</developerConnection>
-    <url>http://languagetool.svn.sourceforge.net/languagetool/tags/languagetool-parent-2.2</url>
+    <connection>scm:svn:https://svn.code.sf.net/p/languagetool/code/tags/languagetool-parent-2.2</connection>
+    <developerConnection>scm:svn:https://svn.code.sf.net/p/languagetool/code/tags/languagetool-parent-2.2</developerConnection>
+    <url>http://svn.code.sf.net/p/languagetool/code/tags/languagetool-parent-2.2</url>
   </scm>
 
   <groupId>org.languagetool</groupId>
