--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
   </parent>
   
   <scm>
-    <connection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/languagetool-parent-2.2</connection>
-    <developerConnection>scm:svn:https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/languagetool-parent-2.2</developerConnection>
-    <url>http://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/languagetool-parent-2.2</url>
+    <connection>scm:svn:https://svn.code.sf.net/p/languagetool/code/trunk/languagetool/</connection>
+    <developerConnection>scm:svn:https://svn.code.sf.net/p/languagetool/code/trunk/languagetool/</developerConnection>
+    <url>http://svn.code.sf.net/p/languagetool/code/trunk/languagetool/</url>
   </scm>
 
   <groupId>org.languagetool</groupId>
   <artifactId>languagetool-parent</artifactId>
-  <version>2.2</version>
+  <version>2.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
@@ -36,7 +36,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.4</version>
         <configuration>
-          <tagBase>https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/</tagBase>
+          <tagBase>https://svn.code.sf.net/p/languagetool/code/tags/</tagBase>
           <mavenExecutorId>forked-path</mavenExecutorId>
         </configuration>
       </plugin>
