--- a/hunspell-native-libs/pom.xml
+++ b/hunspell-native-libs/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.2</version>
+        <version>2.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -50,7 +50,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                  <tagBase>https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/</tagBase>
+                    <tagBase>https://svn.code.sf.net/p/languagetool/code/tags/</tagBase>
                 </configuration>
             </plugin>
         </plugins>
