--- a/languagetool-gui-commons/pom.xml
+++ b/languagetool-gui-commons/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.2</version>
+        <version>2.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -60,7 +60,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                  <tagBase>https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/</tagBase>
+                  <tagBase>https://svn.code.sf.net/p/languagetool/code/tags/</tagBase>
                 </configuration>
             </plugin>            
             <plugin>
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.2</version>
+            <version>2.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
