--- a/languagetool-language-modules/sl/pom.xml
+++ b/languagetool-language-modules/sl/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.2</version>
+        <version>2.2-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
@@ -40,7 +40,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
-                  <tagBase>https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/</tagBase>
+                  <tagBase>https://svn.code.sf.net/p/languagetool/code/tags/</tagBase>
                 </configuration>
             </plugin>            
             <plugin>
@@ -61,14 +61,14 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.2</version>
+            <version>2.2-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.2</version>
+            <version>2.2-SNAPSHOT</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
