--- a/languagetool-webstart/pom.xml
+++ b/languagetool-webstart/pom.xml
@@ -30,7 +30,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
         <configuration>
-          <tagBase>https://languagetool.svn.sourceforge.net/svnroot/languagetool/tags/</tagBase>
+          <tagBase>https://svn.code.sf.net/p/languagetool/code/tags/</tagBase>
         </configuration>
       </plugin>
       <plugin>
