[maven-release-plugin] prepare for next development iteration

--- a/languagetool-standalone/pom.xml
+++ b/languagetool-standalone/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.2</version>
+        <version>2.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
@@ -110,28 +110,28 @@
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-gui-commons</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-commandline</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-server</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>org.languagetool</groupId>
             <artifactId>language-all</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
                 
         <!-- Some tests are used at runtime for rule developers, thus no 'test' scope here: -->
@@ -139,7 +139,7 @@
             <!-- see http://stackoverflow.com/questions/174560/sharing-test-code-in-maven#174670 -->
             <groupId>org.languagetool</groupId>
             <artifactId>languagetool-core</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
             <type>test-jar</type>
         </dependency>
         <dependency>
