--- a/hunspell-native-libs/pom.xml
+++ b/hunspell-native-libs/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.languagetool</groupId>
         <artifactId>languagetool-parent</artifactId>
-        <version>2.2</version>
+        <version>2.3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     
