--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,14 @@
   </parent>
   
   <scm>
-    <connection>scm:svn:https://svn.code.sf.net/p/languagetool/code/tags/languagetool-parent-2.2</connection>
-    <developerConnection>scm:svn:https://svn.code.sf.net/p/languagetool/code/tags/languagetool-parent-2.2</developerConnection>
-    <url>http://svn.code.sf.net/p/languagetool/code/tags/languagetool-parent-2.2</url>
+    <connection>scm:svn:https://svn.code.sf.net/p/languagetool/code/trunk/languagetool/</connection>
+    <developerConnection>scm:svn:https://svn.code.sf.net/p/languagetool/code/trunk/languagetool/</developerConnection>
+    <url>http://svn.code.sf.net/p/languagetool/code/trunk/languagetool/</url>
   </scm>
 
   <groupId>org.languagetool</groupId>
   <artifactId>languagetool-parent</artifactId>
-  <version>2.2</version>
+  <version>2.3-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
