fixed concurrency/threading issues

--- a/languagetool-language-modules/de/pom.xml
+++ b/languagetool-language-modules/de/pom.xml
@@ -76,6 +76,10 @@
                     <reuseForks>true</reuseForks>
                     -->
                 </configuration>
+                    <excludes>
+                        <exclude>**/*ConcurrencyTest.java</exclude>
+                        <exclude>**/Abstract*.java</exclude>
+                    </excludes>
             </plugin>
         </plugins>
     </build>
