--- a/languagetool-language-modules/en/pom.xml
+++ b/languagetool-language-modules/en/pom.xml
@@ -66,6 +66,10 @@
                 <configuration>
                     <argLine>-Xms256m -Xmx256m</argLine>
                 </configuration>
+                    <excludes>
+                        <exclude>**/*ConcurrencyTest.java</exclude>
+                        <exclude>**/Abstract*.java</exclude>
+                    </excludes>
             </plugin>
         </plugins>
     </build>
