speed up tests for simple German by not running the concurrency tests and not re-running the de-DE tests

--- a/languagetool-language-modules/de-DE-x-simple-language/pom.xml
+++ b/languagetool-language-modules/de-DE-x-simple-language/pom.xml
@@ -24,6 +24,33 @@
         </developer>
     </developers>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <tagBase>https://svn.code.sf.net/p/languagetool/code/tags/</tagBase>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.14.1</version>
+                <configuration>
+                    <argLine>-Xms256m -Xmx256m</argLine>
+                    <excludes>
+                        <exclude>**/*ConcurrencyTest.java</exclude>
+                        <exclude>**/Abstract*.java</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.languagetool</groupId>
