adapt release plugin configuration to git

--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
   </parent>
   
   <scm>
-    <connection>scm:svn:https://svn.code.sf.net/p/languagetool/code/trunk/languagetool/</connection>
-    <developerConnection>scm:svn:https://svn.code.sf.net/p/languagetool/code/trunk/languagetool/</developerConnection>
-    <url>http://svn.code.sf.net/p/languagetool/code/trunk/languagetool/</url>
+    <connection>scm:git:git@github.com:languagetool-org/languagetool.git</connection>
+    <developerConnection>scm:git:git@github.com:languagetool-org/languagetool.git</developerConnection>
+    <url>git@github.com:languagetool-org/languagetool.git</url>
   </scm>
 
   <groupId>org.languagetool</groupId>
@@ -37,7 +37,6 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.4.1</version>
         <configuration>
-          <tagBase>https://svn.code.sf.net/p/languagetool/code/tags/</tagBase>
           <mavenExecutorId>forked-path</mavenExecutorId>
         </configuration>
       </plugin>
