set version to 2.4-SNAPSHOT

--- a/pom.xml
+++ b/pom.xml
@@ -15,11 +15,12 @@
     <connection>scm:git:git@github.com:languagetool-org/languagetool.git</connection>
     <developerConnection>scm:git:git@github.com:languagetool-org/languagetool.git</developerConnection>
     <url>git@github.com:languagetool-org/languagetool.git</url>
+    <tag>HEAD</tag>
   </scm>
 
   <groupId>org.languagetool</groupId>
   <artifactId>languagetool-parent</artifactId>
-  <version>2.3-SNAPSHOT</version>
+  <version>2.4-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
