now this version almost runs...

--- a/languagetool-webstart/pom.xml
+++ b/languagetool-webstart/pom.xml
@@ -68,17 +68,14 @@
           <!-- SIGNING -->
           <!-- defining this will automatically sign the jar and its dependencies -->
           <sign>
-            <keystore>myalias.p12</keystore>
+            <keystore>/myalias.p12</keystore>
             <keypass>blabla</keypass>
             <storepass>blabla</storepass>
-            <alias>alias</alias>
+			<storetype>pkcs12</storetype>			
+            <alias>270e0367-a1de-11e1-b19d-8c89a57cdeaa</alias>
             <validity>180</validity>
-            <verify>true</verify>
-            
+            <verify>true</verify>            
           </sign>
-
-		  <pack200>true</pack200>
-          <gzip>true</gzip> <!-- default force when pack200 false, true when pack200 selected ?? -->
 
           <verbose>true</verbose>
         </configuration>
