make jnlp work with a new key

--- a/languagetool-webstart/pom.xml
+++ b/languagetool-webstart/pom.xml
@@ -20,7 +20,7 @@
   <build>
     <resources>
       <resource>
-        <directory>src/main/resources</directory>        
+        <directory>src/</directory>        
       </resource>
       <resource>
         <directory>${basedir}</directory>
@@ -69,8 +69,7 @@
             <keypass>blabla</keypass>
             <storepass>blabla</storepass>
             <storetype>pkcs12</storetype>
-            <alias>270e0367-a1de-11e1-b19d-8c89a57cdeaa</alias>
-            <validity>180</validity>
+            <alias>{92d3be83-b42a-48e5-a0fd-73e481e379ad}</alias>            
             <verify>true</verify>
           </sign>
           <verbose>true</verbose>
@@ -87,5 +86,6 @@
         </dependency>
   </dependencies>
   
+    <url>http://www.languagetool.org</url>
 </project>
 
